--- a/vm2.config
+++ b/vm2.config
@@ -1,6 +1,7 @@
-INTERNAL_IF="enp0s8"
-MANAGMENT_IF="enp0s9"
+INTERNAL_IF="enp0s3"
+MANAGEMENT_IF="enp0s8"
 VLAN=101
 APACHE_VLAN_IP=10.0.0.3/24
+INT_IP=10.0.0.4
 GW_IP=10.0.0.1
 
